assets/css/style.css
/* ... */
.footer-menu a,
.footer-social a {
  color: black;
  text-decoration: none;
  display: block;
  padding-bottom: 10px;
  font-weight: 300;
  font-size: 1rem;
  transition: all 0.2s ease-in;
}

.footer-menu a:hover,
.footer-social a:hover {
  font-weight: 600;
}

.footer-credits h5 {
  padding: 10px 0;
  text-align: center;
  font-size: 0.7rem;
  font-weight: 200;
}

@media (max-width: 1000px) {
  .footer-logo img {
    width: 80px;
  }
}

@media (max-width: 700px) {
  .footer-container {
    flex-direction: column;
    height: unset;
    padding: unset;
    border-bottom: unset;
  }

  .footer-logo,
  .footer-slogan,
  .footer-menu,
  .footer-social {
    width: 100%;
    padding: 7px 10px;
    border-bottom: var(--general-border);
  }

  .footer-logo img {
    width: 30%;
    margin: unset;
    padding: 20px 0;
  }
  .footer-menu ul,
  .footer-social ul {
    margin: unset;
  }
}

/* ----------------------------- HOME PAGE END --------------------------- */

/* ---------------------------- LOGIN PAGE START ------------------------- */

.login {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.login h3 {
  padding: 30px 40px;
  width: 100%;

  border-bottom: var(--general-border);
}

.login-form {
  margin: 50px;
  padding: 40px;
  width: 60%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.sign-in {
  display: flex;
  justify-content: space-between;
}

.login-form input {
  padding: 5px 0;
  margin-bottom: 50px;
  border: unset;
  background-color: unset;
  margin-left: 20px;
  font-size: 1rem;
  border-radius: 0;
}
.login-form > input {
  border-bottom: var(--general-border);
}

.login-form input:focus {
  outline: none;
}

.sign-in input,
.sign-in a {
  cursor: pointer;
  text-transform: uppercase;
  text-decoration: none;
  color: black;
  border-radius: 0;
}

.sign-in input {
  padding: 5px;
  border: solid 1px black;
  transition: all 0.2s ease-in;
  border-radius: 0;
  color: black;
}

.sign-in input:hover,
.sign-in h4:hover {
  background-color: lightgray;
}

.sign-in h4 {
  margin-left: 20px;
  padding: 5px;
  border: solid 1px black;
  transition: all 0.2s ease-in;
}

@media (max-width: 700px) {
  .login h3 {
    padding: 20px 20px;
  }

  .login-form {
    margin: 30px;
    padding: 20px;
    width: 90%;
  }
  .sign-in {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
  }
}

/* -------------------------------  Cart Page -------------------------------- */

.cart-header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  border-bottom: var(--general-border);
}
.cart-header button {
  display: inline-block;
  margin-right: 20px;
  width: 230px;
  padding: 5px;
  text-align: center;
  font-size: 0.8rem;
  cursor: pointer;
  border: solid 1px black;
  background-color: white;
}

.cart-header button:hover {
  background-color: black;
  color: white;
}
.cart-section h3 {
  padding: 30px 40px;
  width: 100%;
}

.cart-section .cart-products-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.cart-section {
  background-color: rgba(255, 255, 255);
  width: 100%;
  margin: auto;
}

.cart-product {
  width: 100%;
  margin: auto;
  border-bottom: var(--general-border);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.cart-products-container .img-container {
  width: 300px;
  height: 300px;
  overflow: hidden;
  border-right: var(--general-border);
}

.cart-products-container img {
  width: 100%;
  height: 100%;
  vertical-align: bottom;
}

.cart-products-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.cart-products-container .cart-desc {
  height: 150px;
  width: 70%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 100px 0 0;
  position: relative;
}

.cart-products-container .pro-name span {
  color: #4b4b4b;
  margin: 10px 0;
  font-weight: 300;
}

.cart-products-container .pro-name h4 {
  margin: 15px 0;
  font-size: 1rem;
}

.cart-products-container .pro-minus,
.pro-plus {
  border: solid 1px black;
  display: inline-block;
  padding: 0 4.5px;
  font-size: 1.2rem;
  font-weight: 700;
  cursor: pointer;
  transition: all 0.1s ease-in;
}

.cart-products-container .pro-count {
  display: inline-block;
  font-size: 1.1rem;
  font-weight: 700;
  width: 30px;

  text-align: center;
}

.cart-products-container .pro-price h5 {
  margin-top: 80px;
  width: 110px;
}

.cart-products-container .pro-price a:hover {
  color: black;
}

.cart-desc .remove-pro {
  position: absolute;
  height: 25px;
  width: 25px;
  display: block;
  border: solid 1px black;
  text-align: center;
  line-height: 25px;
  top: 20px;
  right: -5px;
  transition: all 0.1s ease-in;
  cursor: pointer;
  background-color: white;
  color: black;
  font-size: 1rem;
  font-weight: 600;
}

.cart-desc .remove-pro:hover {
  background-color: black;
  color: white;
}

.cart-section .checkout {
  height: 120px;
  padding: 20px 30px;
  margin: auto;
  width: 90%;
}

.cart-section .checkout .cart-subtotal {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 1.2rem;
}
.checkout .cart-subtotal h5 {
  font-size: 1.2rem;
}

.checkout input {
  display: block;
  margin: 20px auto;
  width: 100%;
  height: 40px;
  border: solid 1px black;
  background-color: white;
  font-size: 1.1rem;
  font-weight: 600;
  transition: all 0.1s ease-in;
  color: black;
  border-radius: 0;
  -webkit-appearance: none;
}

.checkout input:hover {
  background-color: black;
  color: white;
}
.cart-btn-phone {
  display: none;
}
/* ... */

